--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4 col-md-offset-4 user-description text-center">
-					<p>LiUhack is a <a href="https://en.wikipedia.org/wiki/Capture_the_flag#Computer_security">CTF</a> team which members are students at <a href="https://liu.se/">Linköping University</a>. If you are interested to join us, feel free to send an email to us or contact us on our IRC channel <a href="http://webchat.freenode.net?channels=%23liuhack&amp;uio=d4">#liuhack on freenode</a>. </p>
+					<p>LiUhack is a <a href="https://en.wikipedia.org/wiki/Capture_the_flag#Computer_security">CTF</a> team whose members are students at <a href="https://liu.se/">Linköping University</a>. If you are interested to join us, feel free to send an email to us or contact us on our IRC channel <a href="http://webchat.freenode.net?channels=%23liuhack&amp;uio=d4">#liuhack on freenode</a>. </p>
 				</div>
 			</div>
 			<div class="push"></div>
